# word2vequiz

./: README.md  pyproject.toml  setup.sh
src/vequiz/: game.py
src/word2vequiz/: game.py  spinner.py
vequiz/: __init__.py
