[project]
name = "word2vequiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nonomura", email = "kanakana.nono1224@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "gensim>=4.3.3",
]

[project.scripts]
vequiz = "vequiz.game:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vequiz"]